2003-02-26  Adam Byrtek  <alpha@debian.org>

	* extfs.c (extfs_open): Retain original filename as a suffix
	for the temporary filename.
	* vfs.c (mc_def_getlocalcopy): Likewise.

2003-02-24  Adam Byrtek  <alpha@debian.org>

	* extfs/patchfs.in: rm and proper copyin support, more
	functions to make code more clear.

2003-02-19  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* smbfs.c (smbfs_lseek): Backport from Samba 2.2.7 Suite.
	(fake_server_stat): Warning fix for SunOS.  Reformat function.
	(fake_share_stat): Likewise.
	(smbfs_mkdir): Likewise.
	* direntry.c (vfs_s_dump): Likewise.

	* vfs.c (is_localized_month): New function for locale's
	abbreviated month name as any 3 bytes long string without digits
	and control characters.
	(vfs_parse_filedate): Fallback to is_localized_month() if
	is_month() and is_dos_date() fail and set date to Jan 1 1970.
	(vfs_parse_ls_lga): Use is_localized_month().

2003-01-24  Pavel Roskin  <proski@gnu.org>

	* smbfs.c (smbfs_nothingisopen): Warning fix for 64-bit systems.
	(smbfs_free): Likewise.

2003-01-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/urar.in: Search $PATH for unrar, fallback to rar.

2003-01-13  Adam Byrtek  <alpha@debian.org>

	* extfs/patchfs.in: context diff format support, regular
	expressions precompiled, some minor fixes.

2002-12-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/rpm: Use --nosignature only if rpm supports this.

2002-12-25  Pavel Roskin  <proski@gnu.org>

	* extfs.c (read_archive): Free archive if the "list" command
	returned non-zero, return -1.
	Initial implementation from Adam Byrtek <alpha@debian.org>

2002-12-24  Pavel Roskin  <proski@gnu.org>

	* direntry.c (vfs_s_open): If the filesystem is read-only,
	disable file creation.

	* vfs.c (mc_chdir): Don't change current directory until the
	low-level chdir succeeds.

	* vfs.c (vfs_name): Eliminate - it's unused and wrong.

2002-12-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/mailfs.in: Quote filename when opening mailbox.
